# mkdocs-frontmatter-plugin

./: .gitignore  README.md  pyproject.toml
mkdocs_frontmatter_plugin/: config.py  plugin.py
