[tool.poetry]
name = "mkdocs-frontmatter-plugin"
version = "0.1.0"
description = ""
authors = ["Diego Canez <canezdiego@gmail.com>"]
packages = [
    { include = "mkdocs_frontmatter_plugin", from = "." },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
"mkdocs_frontmatter_plugin" = "mkdocs_frontmatter_plugin.plugin:FrontMatterPlugin"